Try to fix that banner on iOS again.

--- a/src/app/components/home/home.style.scss
+++ b/src/app/components/home/home.style.scss
@@ -205,6 +205,7 @@ body {
   text-align: center;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
+  width: 100%;
 }
 
 .featured-projects {
